# sunil1

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  create_structure.sh  docker-compose.yml  gha_logs.txt  package.json  walkthrough.md  wrangler.json  wrangler.jsonc  wrangler.toml
backend/: .env.example  Dockerfile  gha_log.txt  google_apps_script.js  pyproject.toml  requirements.txt  schema.sql  wrangler.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin.py  approval.py  auth.py  dashboard.py  dependencies.py  (+7 more)
backend/app/config/: database.py  seed.py  settings.py
backend/app/middleware/: op_logging.py
backend/app/models/: __init__.py  allowance_master.py  approval.py  approval_hierarchy.py  asset.py  engineer_advance.py  expense.py  expense_asset_mobilise.py  expense_asset_tagging.py  expense_attachment.py  expense_breakdown_call.py  expense_calibration.py  expense_edit_log.py  expense_itinerary.py  expense_other_activity.py  expense_pms_call.py  facility_detail.py  level_approver.py  limit_approval_request.py  login_log.py  notification.py  otp.py  password_history.py  ticket.py  user.py  user_approval_chain.py  user_role.py
backend/app/schemas/: approval.py  common.py  expense.py  user.py
backend/app/services/: auth_service.py  email_service.py
backend/app/utils/: cache.py  constants.py  database_sync.py  db_notifications.py  dual_write.py  gdrive.py  kv_prefill.py  kv_query.py  op_tracker.py  push_notifications.py  security.py
backend/migrations/: update_d1_database.sql
backend/src/: main.py
(+141 files in other folders)
