[project]
name = "sunil1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "aiofiles==23.2.1",
    "pillow>=10.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.31.0",
    "email-validator==2.1.0",
    "cors==1.0.1",
    "httpx==0.25.2"
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
